Wrap images in containing divs, addresses issue #38

--- a/public/noc_html/stylesheets/html.css
+++ b/public/noc_html/stylesheets/html.css
@@ -42,21 +42,44 @@ h2, h3, h4, h5, h6 {
 }
 
 p {
-	font-size: 138.462%;
+	font-size: 138.462%; /* 18 / 13 = 1.38462 */
   line-height: 1.618em;
 }
 
 /* Images stuff */
-img.half-width {
-  float: left;
-  width: 50%;
-  margin: 5px;
+.image-container {
+  position: relative;
 }
 
-img.half-width-right {
-  float: right;
+.image-container img {
+  max-width: 100%;
+}
+
+.image-container .caption {
+  color: #222;
+  font-family: 'Helvetica', Arial, sans-serif;
+  font-size: 100%; /* 100% == 13px when not inside a p tag */
+}
+
+.half-width,
+.half-width-right {
+  margin-top: 1.2em;
+  margin-bottom: 1.2em;
+  position: relative;
   width: 50%;
-  margin: 5px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.half-width {
+  float: left;
+  margin-right: 10px;
+}
+
+.half-width-right {
+  float: right;
+  margin-left: 10px;
 }
 
 img {
